--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,10 @@
             height: 300px; */
             background: #999;
         }
+
+        img {
+            user-select: none;
+        }
     </style>
 </head>
 <body>
@@ -18,5 +22,8 @@
         <img src="http://pic.58pic.com/58pic/13/42/86/45f58PICdRF_1024.jpg" alt="">
     </div>
     <button id="add">添加</button>
+    <button id="clear">清除所有</button>
+    <button id="getAllAreas">获取所有area对象</button>
+    <button id="getAllAreasInfo">获取所有area对象的位置信息</button>
 </body>
 </html>
