--- a/examples/index.html
+++ b/examples/index.html
@@ -10,9 +10,11 @@
             /* width: 300px;
             height: 300px; */
             background: #999;
+            width: 500px;
         }
 
         img {
+            width: 100%;
             user-select: none;
         }
     </style>
