--- a/examples/index.html
+++ b/examples/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="container">
-        <img src="http://pic.58pic.com/58pic/13/42/86/45f58PICdRF_1024.jpg" alt="">
+        <img src="./timg.jpg" alt="">
     </div>
     <button id="add">添加</button>
     <button id="clear">清除所有</button>
